Fixed some layout issues

--- a/stylesheets/ihover.css
+++ b/stylesheets/ihover.css
@@ -21,6 +21,13 @@
   height: 100%;
 }
 
+.ih-item.outer-circle {
+  position: relative;
+  width: 260px;
+  height: 260px;
+  border-radius: 50%;
+}
+
 .ih-item.circle {
   position: relative;
   width: 250px;
