--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -97,16 +97,12 @@ section.text {
 
 .icon-list {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 20%;
 }
 
 .icon {
   width: 32px;
   height: 32px;
   margin-top:10px;
-  margin-right: 10px;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
@@ -116,17 +112,21 @@ section.text {
   width: 40px;
   height: 40px;
   margin-top:2px;
-  margin-right:2px;
 }
 
 .icon-twitter {
   content: url("../images/twitter.svg");
 }
 
-.icon-stackoverflow {
+.icon-stackoverflow  {
   content: url("../images/stackoverflow.svg");
 }
 
-.icon-github {
+.icon-github  {
   content: url("../images/github.svg");
+}
+
+.centered-circle {
+  display: flex;
+  justify-content: center;
 }
